k8s/job-database-mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: p2-job-database
spec:
  selector:
    app: p2-job-database
  # type: LoadBalancer
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p2-job-database
  labels:
    app: p2-job-database
spec:
  selector:
    matchLabels:
      app: p2-job-database
      tier: mysql
  template:
    metadata:
      labels:
        app: p2-job-database
        tier: mysql
    spec: 
      containers:
      - image: mariadb
        name: p2-job-database
        ports:
        - containerPort: 3306
          hostPort: 3306
        volumeMounts:
        - name: p2-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: p2-persistent-storage
        persistentVolumeClaim:
          claimName: p2-mariadb-pv-claim
