k8s/minio-deployment.yaml
# minio service
kind: Service
apiVersion: v1
metadata:
  name: p2-minio
spec:
  selector:
    app: p2-minio
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
    protocol: TCP
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p2-minio
spec:
  selector:
    matchLabels:
      app: p2-minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: p2-minio
    spec:
      containers:
      - name: minio
        image: minio/minio:RELEASE.2020-05-01T22-19-14Z
        args:
        - server
        - /storage
        ports:
        - containerPort: 9000
          hostPort: 9000
        readinessProbe:
          httpGet:
            path: /minio/health/ready
            port: 9000
          initialDelaySeconds: 30
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
          initialDelaySeconds: 30
          periodSeconds: 5
        volumeMounts:
        - name: p2-vc
          mountPath: "/storage"
      volumes:
      - name: p2-vc
        persistentVolumeClaim:
          claimName: p2-pv-claim
