k8s/minio-deploymeny.yaml
# minio service
kind: Service
apiVersion: v1
metadata:
  name: p2-minio
spec:
  selector:
    app: p2-minio
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9000
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p2-minio
spec:
  selector:
    matchLabels:
      app: p2-minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: p2-minio
    spec:
      containers:
      - name: minio
        image: minio/minio:latest
        args:
        - server
        - /storage
        # - '--console-address ":9000"'
        ports:
        - containerPort: 9000
          hostPort: 9000
        volumeMounts:
        - name: p2-vc
          mountPath: "/storage"
      volumes:
      - name: p2-vc
        persistentVolumeClaim:
          claimName: p2-pv-claim
