k8s/web-controller-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: p2-web-controller
spec:
  selector:
    app: p2-web-controller
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p2-web-controller
  labels:
    app: p2-web-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: p2-web-controller
  template:
    metadata:
      labels:
        app: p2-web-controller
    spec:
      containers:
      - name:  p2-web-controller
        image: ghcr.io/cs-muic/scalable-p2-scalable-t3-code-dek-waen/p2-web-controller
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: dockerconfigjson-github-com
