k8s/workers.yaml
# GIF Composer Service
kind: Service
apiVersion: v1
metadata:
  name: p2-compose-worker
spec:
  selector:
    app: p2-compose-worker
  type:  ClusterIP
  ports:
  - protocol: "TCP"
    port:  6000
---
# GIF Composer Worker Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p2-compose-worker
  labels:
    app: p2-compose-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: p2-compose-worker
  template:
    metadata:
      labels:
        app: p2-compose-worker
    spec:
      containers:
      - name: backend 
        image: ghcr.io/cs-muic/scalable-p2-scalable-t3-code-dek-waen/p2-compose-worker
        imagePullPolicy: Always
      imagePullSecrets:
      - name: dockerconfigjson-github-com
---
# Extract and Resize Worker Service
kind: Service
apiVersion: v1
metadata:
  name: p2-extract-worker
spec:
  selector:
    app: p2-extract-worker
  type:  ClusterIP
  ports:
  - protocol: "TCP"
    port:  6000
---
# Extract and Resize Worker Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p2-extract-worker
  labels:
    app: p2-extract-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: p2-extract-worker
  template:
    metadata:
      labels:
        app: p2-extract-worker
    spec:
      containers:
      - name: backend 
        image: ghcr.io/cs-muic/scalable-p2-scalable-t3-code-dek-waen/p2-extract-worker
        imagePullPolicy: Always
      imagePullSecrets:
      - name: dockerconfigjson-github-com
---
# Update Status Worker Service
kind: Service
apiVersion: v1
metadata:
  name: p2-update-status-worker
spec:
  selector:
    app: p2-update-status-worker
  type:  ClusterIP
  ports:
  - protocol: "TCP"
    port:  6000
---
# Update Status Worker Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p2-update-status-worker
  labels:
    app: p2-update-status-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: p2-update-status-worker
  template:
    metadata:
      labels:
        app: p2-update-status-worker
    spec:
      containers:
      - name: backend 
        image: ghcr.io/cs-muic/scalable-p2-scalable-t3-code-dek-waen/p2-update-status-worker
        imagePullPolicy: Always
      imagePullSecrets:
      - name: dockerconfigjson-github-com
