k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p2-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /minio
        pathType: Prefix
        backend:
          service: 
            name: p2-minio
            port:
              number: 9000
      - path: /api
        pathType: Prefix
        backend:
          service: 
            name: p2-web-controller
            port:
              number: 80
